--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -222,3 +222,20 @@ background-color: #A3C1DA;
   margin-bottom: 15px;
   color: white;
 }
+
+
+/* LOADING INDICATOR ANIMATION */
+.loading-indicator {
+  font-size: 16px;
+  font-weight: bold;
+  color: #007BFF; /* You can change the color */
+  margin-top: 10px;
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
