defined START, END of files in comments

--- a/backend/public/loginsignupstyle.css
+++ b/backend/public/loginsignupstyle.css
@@ -1,4 +1,4 @@
-/* styles.css */
+/* START of loginsignupstyle.css */
 
 /* Reset some default browser styles */
 body {
@@ -66,3 +66,6 @@ a:hover {
     text-decoration: underline;
     /* Underline on hover */
 }
+
+
+/* END of loginsignupstyle.css */
