--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -1,3 +1,5 @@
+/* START of style.css */
+
 /* Basic CSS Reset */
 * {
   margin: 0;
@@ -289,3 +291,6 @@ button:hover {
     opacity: 1;
   }
 }
+
+
+/* End of style.css */
